--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -68,6 +68,7 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           python3 -m pip install -r tests/requirements.txt
+          python3 -m pip install -e .
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Download iverilog
@@ -107,6 +108,7 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           python3 -m pip install -r tests/requirements.txt
+          python3 -m pip install -e .
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Download iverilog
