--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,13 @@ classifiers = [
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
 ]
 
+# python3 -m pip install git+http://git@github.com/worldofkerry/tohdl.git#subdirectory=pytohdl --force-reinstall --upgrade
+# python3 -m pip install git+http://git@github.com/worldofkerry/tohdl.git@bugfix#subdirectory=pytohdl --force-reinstall --upgrade
+dependencies = [
+    "typing-extensions",
+    "pytohdl @ git+http://git@github.com/worldofkerry/tohdl.git#subdirectory=pytohdl",
+]
+
 [project.urls]
 "Homepage" = "https://github.com/WorldofKerry/Python2Verilog/"
 "Bug Tracker" = "https://github.com/WorldofKerry/Python2Verilog/issues"
