--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ full = ["matplotlib", "numpy", "dash_cytoscape", "dash"]
 "include" = ["python2verilog*"]
 
 [tool.pytest.ini_options]
+testpaths = "python2verilog tests/"
 log_cli = true
 log_cli_level = "WARNING"
 log_cli_format = "%(levelname)s %(filename)s:%(lineno)s %(message)s"
