--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ classifiers = [
 # python3 -m pip install git+http://git@github.com/worldofkerry/tohdl.git@bugfix#subdirectory=pytohdl --force-reinstall --upgrade
 dependencies = [
     "typing-extensions",
-    "pytohdl @ git+http://git@github.com/worldofkerry/tohdl.git#subdirectory=pytohdl",
+    "pytohdl @ git+http://git@github.com/worldofkerry/tohdl.git@bugfix#subdirectory=pytohdl",
 ]
 
 [project.urls]
@@ -31,6 +31,7 @@ full = ["matplotlib", "numpy", "dash_cytoscape", "dash"]
 "include" = ["python2verilog*"]
 
 [tool.pytest.ini_options]
+testpaths = "python2verilog tests/"
 log_cli = true
 log_cli_level = "WARNING"
 log_cli_format = "%(levelname)s %(filename)s:%(lineno)s %(message)s"
